# batch_processing

sorting_hat_step_batch/: pyproject.toml  read.config.json
sorting_hat_step_batch/sorting_hat_step_batch/: database.py  step.py
sorting_hat_step_batch/sorting_hat_step_batch/utils/: database.py  parser.py  wizard.py
