[tool.poetry]
name = "sorting-hat-step-batch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sorting_hat_step_batch"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
batch_processing = {path = "../batch_processing/batch_processing", develop = true}
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
